clusters/lefranc-0/flux-system/patch-no-cross-namespace-refs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
      - args:
        - --default-service-account=default
        - --no-cross-namespace-refs=true
        - --events-addr=http://notification-controller.flux-system.svc.cluster.local./
        - --watch-all-namespaces=true
        - --log-level=info
        - --log-encoding=json
        - --enable-leader-election
        image: 274295908850.dkr.ecr.eu-west-1.amazonaws.com/fluxcd/helm-controller:v0.24.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kustomize-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
      - args:
        - --default-service-account=default
        - --no-cross-namespace-refs=true
        - --events-addr=http://notification-controller.flux-system.svc.cluster.local./
        - --watch-all-namespaces=true
        - --log-level=info
        - --log-encoding=json
        - --enable-leader-election
        image: 274295908850.dkr.ecr.eu-west-1.amazonaws.com/fluxcd/kustomize-controller:v0.28.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
      - args:
        - --no-cross-namespace-refs=true
        - --watch-all-namespaces=true
        - --log-level=info
        - --log-encoding=json
        - --enable-leader-election
        image: 274295908850.dkr.ecr.eu-west-1.amazonaws.com/fluxcd/notification-controller:v0.26.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: source-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
      - image: 274295908850.dkr.ecr.eu-west-1.amazonaws.com/fluxcd/source-controller:v0.29.0
