clusters/lefranc-0/flux-system/patch-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
      - args:
        - --no-cross-namespace-refs=true
        - --watch-all-namespaces=true
        - --log-level=info
        - --log-encoding=json
        - --enable-leader-election
        image: 274295908850.dkr.ecr.eu-west-1.amazonaws.com/fluxcd/notification-controller:v0.26.0
