clusters/lefranc-0/flux-system/patch-source.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: source-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
      - image: 274295908850.dkr.ecr.eu-west-1.amazonaws.com/fluxcd/source-controller:v0.29.0
